feitas alterações nas seguintes rotas para o funcionamento das solicitaçõe finais do projeto
